--- a/source/_posts/前端/前端自动化测试.md
+++ b/source/_posts/前端/前端自动化测试.md
@@ -1,16 +1,10 @@
 ---
 title: 前端自动化测试
-date: 2021-04-06
-categories: [大前端]
+date: 2020-02-17
+categories: [前端, js]
 tags: 
-  - 测试
+  - 自动化测试
 ---
-
-在前端大型项目开发的过程中，自动化测试都是不可缺少的一环。自动化测试不但可以降低 bug 出现的频率，也可让项目更加健壮
-
-<!-- more -->
-
-# 前端自动化测试
 
 ## 1. 单元测试
 
