--- a/source/_posts/Css3/外边距合并问题.md
+++ b/source/_posts/Css3/外边距合并问题.md
@@ -1,7 +1,7 @@
 ---
 title: 外边距合并问题
 date: 2020-05-15
-categories: [Css]
+categories: [Css3]
 ---
 
 > 当两个元素是兄弟关系的时候，如果给上方元素设置`margin-bottom` 给下方元素设置`margin-top`，外边距会合并，最终外边距是这两个值中较大的那一个；
