feat: 数组排序各个算法

--- a/source/_posts/算法/排序/冒泡排序.md
+++ b/source/_posts/算法/排序/冒泡排序.md
@@ -1,9 +1,29 @@
 ---
-title: keep-alive
+title: 冒泡排序
 date: 2021-04-15
 categories: [算法]
 ---
 
-```js
+## 原理
 
+从第一个元素开始，把当前元素和下一个索引元素进行比较，如果当前元素大，就交换位置，重复操作直到比较到最后一个元素，那么此时最后一个元素就是该数组中最大的数。下一轮重复以上操作，但是此时最后一个元素已经是最大数了，所以不需要再比较最后一个元素，只需要比较到 length - 2 的位置即可
+
+## 实现
+
+```js
+function bubbleSort(arr) {
+  for (let i = arr.length - 1; i > 0; i--) {
+    for (let j = 0; j < i; j++) {
+      // 索引大的数组值大于索引小的数组值，交换
+      if (arr[j] > arr[j + 1]) {
+        [arr[j], arr[j + 1]] = [arr[j + 1], arr[j]];
+      }
+    }
+  }
+  return arr;
+}
 ```
+
+## 时间复杂度
+
+时间复杂度: O(n<sup>2</sup>)
