--- a/source/_posts/算法/排序/希尔排序.md
+++ b/source/_posts/算法/排序/希尔排序.md
@@ -41,4 +41,4 @@ function shellSort(arr) {
 
 ## 时间复杂度
 
-最佳: O(nlogn) 最差: O(nlog<sup>2<sup>n) 平均: O(nlog<sup>2<sup>n)
+最佳: O(nlogn) 最差: O(nlog<sup>2</sup>n) 平均: O(nlog<sup>2</sup>n)
