fix: 基本手写内容

--- a/source/_posts/面试精选/手写题.md
+++ b/source/_posts/面试精选/手写题.md
@@ -522,7 +522,7 @@ function shallowThrottle(func, wait) {
 /**
  * @desc leading 立即执行一次
  * @desc trailing 执行结束后是否再执一次
- */ 
+ */
 function throttle(func, wait, leading = true, trailing = true) {
   let timeout = null,
     previous = 0;
@@ -555,4 +555,145 @@ function throttle(func, wait, leading = true, trailing = true) {
   };
   return fn;
 }
+```
+
+## 数组去重
+
+### 利用 filter + indexOf 去重
+
+```js
+const arr = [1, 2, 3, 4, 4, 3, 65, 16, 24, null, undefined, undefined];
+const filter = arr.filter((item, index, array) => array.indexOf(item) === index);
+console.log(filter);
+```
+
+### 利用 reduce + includes 去重
+
+```js
+const arr = [1, 2, 3, 4, 4, 3, 65, 16, 24, null, undefined, undefined];
+const filter = arr.reduce((prev, cur) => (prev.includes(cur) ? prev : [...prev, cur]), []);
+console.log(filter);
+```
+
+### 利用 Set 数据结构去重
+
+```js
+const arr = [1, 2, 3, 4, 4, 3, 65, 16, 24, null, undefined, undefined];
+const filter = Array.from(new Set(arr));
+console.log(filter);
+```
+
+## 数组扁平化
+
+### 递归实现
+
+```js
+const arr = [1, [2, [3]]];
+const flatten = arr => {
+  let result = [];
+  for (let i = 0; i < arr.length; i++) {
+    if (arr[i] && arr[i].length) {
+      result = result.concat(flatten(arr[i]));
+    } else {
+      result.push(arr[i]);
+    }
+  }
+  return result;
+};
+console.log(flatten(arr));
+```
+
+### 利用 while 实现
+
+```js
+const arr = [1, [2, [3]]];
+const flatten = arr => {
+  while (arr.some(item => Array.isArray(item))) {
+    arr = [].concat(...arr);
+  }
+  return arr;
+};
+console.log(flatten(arr));
+```
+
+### 利用 reduce 实现
+
+```js
+const arr = [1, [2, [3]]];
+const flatten = arr => {
+  return arr.reduce((prev, cur) => prev.concat(Array.isArray(cur) ? flatten(cur) : cur), []);
+};
+console.log(flatten(arr));
+```
+
+## 函数柯理化
+
+> 使函数从一次调用传入多个参数变成多次调用每次传一个参数
+
+```js
+function curry(fn) {
+  const judge = (...args) => {
+    if (args.length === fn.length) return fn(...args);
+    return (...arg) => judge(...args, ...arg);
+  };
+  return judge;
+}
+
+function add(a, b, c) {
+  return a + b + c;
+}
+
+let addCurry = curry(add);
+console.log(addCurry(1)(2)(3));
+```
+
+## 解析 url 参数
+
+```js
+function getParams(url) {
+  const str = /.+\?(.+)$/.exec(url)[1];
+  const arr = str.split("&");
+  let obj = {};
+  arr.forEach(item => {
+    if (/=/.test(item)) {
+      let [key, value] = item.split("=");
+      value = decodeURIComponent(value);
+      value = /^\d+$/.test(value) ? parseFloat(value) : value;
+      if (obj.hasOwnProperty(key)) {
+        obj[key] = [].concat(obj[key], value);
+      } else if (typeof value === "string" && value.split(",").length > 1) {
+        obj[key] = value.split(",");
+      } else {
+        obj[key] = value;
+      }
+    } else {
+      obj[item] = ture;
+    }
+    return obj;
+  });
+}
+
+console.log(getParams("https://www.baidu.com?name=1&age=20&hobby=1,2,3&name=2&name=3"));
+```
+
+## 实现 new 关键字
+
+> 新对象需要能够访问到构造函数的属性，因此需重新指定它的原型
+
+```js
+function ObjectFactory() {
+  let constructor = [].shift.call(arguments);
+  let obj = {};
+  obj.__proto__ = constructor.prototype;
+  constructor.apply(obj, arguments);
+  return obj;
+}
+
+function Person(name, age) {
+  this.name = name;
+  this.age = age;
+}
+
+let person = ObjectFactory(Person, "zhangsan", 12);
+console.log(person);
 ```
