--- a/source/_posts/面试精选/手写题.md
+++ b/source/_posts/面试精选/手写题.md
@@ -4,6 +4,172 @@ date: 2021-05-25
 categories: [面试, 手写题]
 ---
 
+## js 判断数据类型
+
+### 准确判断数据类型
+
+```js
+Object.prototype.toString.call(1); // ["object Number"]
+Object.prototype.toString.call("1"); // ["object String"]
+Object.prototype.toString.call(false); // ["object Boolean"]
+Object.prototype.toString.call(undefined); // ["object Undefined"]
+Object.prototype.toString.call(null); // ["object Null"]
+Object.prototype.toString.call([1, 2, 3]); // ["object Array"]
+Object.prototype.toString.call({}}); // ["object Object"]
+Object.prototype.toString.call(NaN); // ["object Number"]
+```
+
+### 利用 typeof 判断基本数据类型
+
+```js
+typeof 1; // "number"
+typeof "1"; // "string"
+typeof false; // boolean
+typeof undefined; // undefined
+```
+
+### 利用 instanceof 判断引用数据类型
+
+```js
+[1, 2, 3] instanceof Array; // true
+{} instanceof Object; // true
+function() {} instanceof Function; // true
+
+'1' instanceof String; // false
+1 instanceof Number; // false
+false instanceof Boolean; // false
+```
+
+## 数组原型常用方法实现
+
+### Array.prototype.every
+
+```js
+Array.prototype.every2 = function (callback) {
+  for (let i = 0; i < this.length; i++) {
+    if (!callback(this[i], i, this)) {
+      return false;
+    }
+  }
+  return true;
+};
+
+// example
+var arr = [
+  { name: "zhangsan", age: 20 },
+  { name: "lisi", age: 19 },
+  { name: "wangwu", age: 18 },
+  { name: "liliu", age: 21 }
+];
+console.log(arr.every2(item => item.age > 17));
+```
+
+### Array.prototype.filter
+
+```js
+Array.prototype.filter2 = function (callback) {
+  let arr = [];
+  for (let i = 0; i < this.length; i++) {
+    if (callback(this[i], i, this)) {
+      arr.push(this[i]);
+    }
+  }
+  return arr;
+};
+
+// example
+var arr = [
+  { name: "zhangsan", age: 20 },
+  { name: "lisi", age: 19 },
+  { name: "wangwu", age: 18 },
+  { name: "liliu", age: 21 }
+];
+console.log(arr.filter2(item => item.age > 19));
+console.log(arr.filter2(item => item.age > 17));
+```
+
+### Array.prototype.forEach
+
+```js
+Array.prototype.forEach2 = function (callback) {
+  for (let i = 0; i < this.length; i++) {
+    callback(this[i], i, this);
+  }
+};
+
+// example
+var arr = [1, 2, 3, 4];
+arr.forEach2((item, index) => {
+  console.log(item, index);
+});
+```
+
+### Array.prototype.map
+
+```js
+Array.prototype.map2 = function (callback) {
+  let arr = [];
+  for (let i = 0; i < this.length; i++) {
+    arr.push(callback(this[i], i, this));
+  }
+  return arr;
+};
+
+// example
+var arr = [
+  { name: "zhangsan", age: 20 },
+  { name: "lisi", age: 19 }
+];
+console.log(arr.map2(item => item.name));
+console.log(arr.map2(item => item.age));
+```
+
+### Array.prototype.some
+
+```js
+Array.prototype.some2 = function (callback) {
+  let arr = [];
+  for (let i = 0; i < this.length; i++) {
+    arr.push(callback(this[i], i, this));
+  }
+  return arr.indexOf(true) > -1;
+};
+
+// example
+var arr = [
+  { name: "zhangsan", age: 20 },
+  { name: "lisi", age: 19 },
+  { name: "wangwu", age: 18 },
+  { name: "liliu", age: 21 }
+];
+console.log(arr.some2(item => item.age === 22));
+console.log(arr.some2(item => item.age === 21));
+console.log(arr.some2(item => item.age >= 19));
+```
+
+### Array.prototype.reduce
+
+```js
+Array.prototype.reduce2 = function (callback, initValue) {
+  if (!Array.isArray(this) || !this.length || typeof callback !== "function") return [];
+  var hasInitValue = initValue !== undefined;
+  var val = hasInitValue ? initValue : this[0];
+  for (var i = hasInitValue ? 0 : 1; i < this.length; i++) {
+    val = callback(val, this[i], i, this);
+  }
+  return val;
+};
+
+var arr = [
+  { name: "zhangsan", age: 20 },
+  { name: "lisi", age: 19 },
+  { name: "wangwu", age: 18 },
+  { name: "liliu", age: 21 }
+];
+console.log(arr.reduce2((prev, cur) => prev + cur.age, 0));
+console.log(arr.reduce2((prev, cur) => [...prev, cur.name], []));
+```
+
 ## 长列表虚拟滚动实现
 
 ### vue
