--- a/source/_posts/面试精选/计算机网路.md
+++ b/source/_posts/面试精选/计算机网路.md
@@ -4,6 +4,44 @@ date: 2021-04-19
 categories: [面试, 计算机网络]
 ---
 
+## https 介绍
+
+HTTPS 协议 = HTTP 协议 + SSL/TLS 协议, 在数据传输过程中, 需要使用 SSL/TLS 协议对数据进行加密和解密, 需要使用 HTTP 对加密后的数据进行传输
+
+- HTTPS 为了兼顾安全和效率, 同时使用了对称加密和非对称加密
+- 总的来说, 对数据进行对称加密, 对称加密所需要使用的密钥通过非对称加密传输
+
+### 为什么使用对称加密
+
+非对称加密基于大数运算, 速度慢, 需要更多的位数。相同长度的对称加密要比非对称加密短
+
+## http2.0 优化点
+
+1. header 压缩
+   采用 HPACK 算法, 在客户端和服务端两端简历 "字典", 用索引号表示重复的字符串, 还采用哈夫曼编码来压缩整数和字符串, 可以提高 50% - 90% 的高压缩率
+2. 多路复用
+   采用二进制分帧传输, 不存在先后关系, 因此也就不存在等待排队, 也就没有了 HTTP 队头阻塞问题。
+   通信双方都可以给对分发送二进制帧， 这种二进制帧的双向传输的序列，也叫做流。 HTTP/2 用流来在一个 TCP 连接上来进行数据帧的通信， 这就是多路复用的概念。
+3. 设置请求优先级
+   在二进制帧当中还有其它的一些字段, 实现了优先级和流量控制等功能
+4. 服务器推送
+   服务器不再是完全被动地响应请求，也可以新建 "流" 主动向客户端发送消息。
+
+## http3.0
+
+采用 Quic 协议: HTTP/3 选择了一个折中的方法——UDP 协议， 基于 UDP 实现了类似于 TCP 的多路数据流、传输可靠性等功能，我们把这套功能称为 QUIC 协议
+
+HTTP/3 中的 QUIC 协议集合了以下几点功能:
+
+1. 实现了类似 TCP 的流量控制、传输可靠性的功能
+2. 集成了 TLS 加密功能
+3. 实现了 HTTP/2 中的多路复用功能。
+
+和 TCP 不同，QUIC 实现了在同一物理连接上可以有多个独立的逻辑数据流。
+实现了数据流的单独传输，就解决了 TCP 中队头阻塞的问题。
+
+---
+
 ## 应用层
 
 应用层协议定义了应用进程间的交互和通信规则，不同主机的应用进程间如何相互传递报文，比如传递的报文的类型、格式、
