--- a/source/_posts/面试精选/手写题.md
+++ b/source/_posts/面试精选/手写题.md
@@ -863,3 +863,285 @@ function Person(name, age) {
 let person = ObjectFactory(Person, "zhangsan", 12);
 console.log(person);
 ```
+
+## 实现 jsonp
+
+```js
+const jsonp = ({ url, params, callback }) => {
+  const generateUrl = () => {
+    let dataSrc = "";
+    for (let key in params) {
+      if (params.hasOwnProperty(key)) {
+        dataSrc += `${key}=${params[key]}&`;
+      }
+    }
+    dataSrc += `callback=${callback}`;
+    return `${url}?${dataSrc}`;
+  };
+  return new Promise((resolve, reject) => {
+    const scriptElement = document.createElement("script");
+    scriptElement.src = generateUrl();
+    document.body.appendChild(scriptElement);
+    window.callback = data => {
+      resolve(data);
+      document.removeChild(scriptElement);
+    };
+  });
+};
+```
+
+## 实现 call、apply、bind
+
+### call
+
+```js
+Function.prototype.call2 = function (ctx, ...args) {
+  let context = ctx || window;
+  context.fn = this;
+  let result = context.fn(args);
+  delete context.fn;
+  return result;
+};
+```
+
+## apply
+
+```js
+Function.prototype.apply2 = function (ctx, ...args) {
+  let context = ctx || window;
+  context.fn = this;
+  if (!args[0].length) return context.fn();
+  let result = context.fn(...args[0]);
+  delete context.fn;
+  return result;
+};
+```
+
+## bind
+
+```js
+Function.prototype.bind2 = function (ctx, ...args) {
+  let _self = this;
+  function Fn() {}
+  let f = function (...fArgs) {
+    return _self.apply(this instanceof Fn ? this : ctx, args.concat(fArgs));
+  };
+  Fn.prototype = this.prototype;
+  f.prototype = new Fn();
+  return f;
+};
+```
+
+## 深浅拷贝
+
+### 浅拷贝
+
+```js
+function shallowCopy(obj) {
+  let newObj = obj instanceof Array ? [] : {};
+  for (let key in obj) {
+    if (obj.hasOwnproperty(key)) {
+      newObj[key] = obj[key];
+    }
+  }
+  return newObj;
+}
+
+let obj1 = {
+  a: 1,
+  b: 2,
+  c: {
+    d: 3
+  }
+};
+
+let obj2 = shallowCopy(obj1);
+obj2.a = 3;
+obj2.c.d = 4;
+console.log(obj1.a); // 1
+console.log(obj2.a); // 3
+console.log(obj1.c.d); // 4
+console.log(obj2.c.d); // 4
+```
+
+### 深拷贝
+
+```js
+/**
+ * @desc 只考虑普通对象属性，不考虑内置对象和函数。
+ */
+function deepCopy(obj) {
+  let newObj = Array.isArray(obj) ? [] : {};
+  if (obj && typeof obj === "object") {
+    for (let key in obj) {
+      if (obj[key] && typeof obj[key] === "object") {
+        newObj[key] = deepClone(obj[key]);
+      } else {
+        newObj[key] = obj[key];
+      }
+    }
+  }
+  return newObj;
+}
+
+let obj1 = {
+  a: 1,
+  b: 2,
+  c: {
+    d: 3
+  }
+};
+
+let obj2 = deepClone(obj1);
+obj2.a = 3;
+obj2.c.d = 4;
+console.log(obj1.a); // 1
+console.log(obj2.a); // 3
+console.log(obj1.c.d); // 3
+console.log(obj2.c.d); // 4
+```
+
+## 继承
+
+### 寄生组合继承
+
+> 为了解决组合式继承调用两次构造函数的问题
+> 解决方案:
+> 不直接调用父类构造函数给子类原型赋值, 而是通过创建空函数 F 获取父类原型的副本
+
+```js
+function Animal(name) {
+  this.name = name;
+  this.colors = ["black", "white"];
+}
+
+Animal.prototype.getName = function () {
+  return this.name;
+};
+
+function Dog(name, age) {
+  Animal.call(this, name);
+  this.age = age;
+}
+
+// Dog.prototype = new Animal();
+// Dog.prototype.constructor = Dog;
+
+// 最简单的替换
+Dog.prototype = Object.create(Animal.prototype);
+Dog.prototype.constructor = Dog;
+
+let dog1 = new Dog("奶昔", 2);
+dog1.colors.push("yellow");
+
+let dog2 = new Dog("奶茶", 1);
+console.log(dog2);
+```
+
+### 借用构造函数继承
+
+> 解决了原型链继承的 2 个问题: 引用类型共享问题、传参问题
+> 问题:
+> 方法都定义在构造函数中，无法复用；每次创建子类实例都会重新创建一边方法，性能问题。
+
+```js
+function Animal() {
+  this.colors = ["red", "green", "blue"];
+  this.getColors = function () {
+    return this.colors;
+  };
+}
+
+function Dog() {
+  Animal.call(this);
+}
+
+let dog1 = new Dog();
+dog1.colors.push("white");
+console.log(dog1.getColors());
+
+let dog2 = new Dog();
+console.log(dog2.getColors());
+```
+
+### 原型式继承
+
+> 问题:
+> 原型包含的引用类型的属性将被所有实例共享
+> 子类实例化时不能给父类构造函数传递参数
+
+```js
+function Animal() {
+  this.colors = ["black", "white"];
+}
+
+Animal.prototype.getColor = function () {
+  return this.colors;
+};
+
+function Dog() {}
+Dog.prototype = new Animal();
+
+let dog1 = new Dog();
+dog1.colors.push("yellow");
+let dog2 = new Dog();
+console.log(dog2.colors);
+```
+
+### 组合式继承
+
+> 问题:
+> 调用了两次构造函数 new 和 Animal.call
+
+```js
+// 结合原型链和借用构造函数
+function Animal(name) {
+  this.name = name;
+  this.colors = ["black", "white"];
+}
+
+Animal.prototype.getName = function () {
+  return this.name;
+};
+
+function Dog(name, age) {
+  Animal.call(this, name);
+  this.age = age;
+}
+
+Dog.prototype = new Animal();
+Dog.prototype.constructor = Dog;
+
+let dog1 = new Dog("奶昔", 2);
+dog1.colors.push("yellow");
+
+let dog2 = new Dog("奶茶", 1);
+console.log(dog2);
+```
+
+### class 继承
+
+```js
+class Animal {
+  constructor(name) {
+    this.name = name;
+    this.colors = ["red", "green", "blue"];
+  }
+  getName() {
+    return this.name;
+  }
+}
+
+class Dog extends Animal {
+  constructor(name, age) {
+    super(name);
+    this.age = age;
+  }
+}
+
+let dog1 = new Dog("奶昔", 2);
+dog1.colors.push("yellow");
+
+let dog2 = new Dog("奶茶", 1);
+console.log(dog2);
+```
