--- a/source/_posts/面试精选/手写题.md
+++ b/source/_posts/面试精选/手写题.md
@@ -904,7 +904,7 @@ Function.prototype.call2 = function (ctx, ...args) {
 };
 ```
 
-## apply
+### apply
 
 ```js
 Function.prototype.apply2 = function (ctx, ...args) {
@@ -917,7 +917,7 @@ Function.prototype.apply2 = function (ctx, ...args) {
 };
 ```
 
-## bind
+### bind
 
 ```js
 Function.prototype.bind2 = function (ctx, ...args) {
