--- a/source/_posts/面试精选/手写题.md
+++ b/source/_posts/面试精选/手写题.md
@@ -1145,3 +1145,35 @@ dog1.colors.push("yellow");
 let dog2 = new Dog("奶茶", 1);
 console.log(dog2);
 ```
+
+## 异步串行输出
+
+> 实现 createFlow 按照 a, b, 延时 1s, c, 延时 1s, d, e, done 顺序打印
+
+```js
+const log = console.log;
+const delay = ms => new Promise(resolve => setTimeout(resolve, ms));
+function createFlow(iterator = []) {
+  return {
+    run(cb = () => {}) {
+      return [...iterator, cb].reduce((prev, cur) => {
+        return prev.then(Array.isArray(cur) ? createFlow(cur).run : cur.hasOwnProperty("run") ? cur.run : cur);
+      }, Promise.resolve());
+    }
+  };
+}
+const subFlow = createFlow([() => delay(1000).then(() => log("c"))]);
+createFlow([() => log("a"), () => log("b"), subFlow, [() => delay(1000).then(() => log("d")), () => log("e")]]).run(() => {
+  log("done");
+});
+
+function createFlow(iterator = []) {
+  return {
+    run(cb = () => {}) {
+      return [...iterator, cb].reduce((prev, cur) => {
+        return prev.then(Array.isArray(cur) ? createFlow(cur).run : cur.hasOwnProperty("run") ? cur.run : cur);
+      }, Promise.resolve());
+    }
+  };
+}
+```
