--- a/source/_posts/面试精选/手写题.md
+++ b/source/_posts/面试精选/手写题.md
@@ -1146,6 +1146,22 @@ let dog2 = new Dog("奶茶", 1);
 console.log(dog2);
 ```
 
+## 使用 setTimeout 模拟 setInterval
+
+```js
+function mySetInterval(fn, timeout) {
+  let timer = { flag: true };
+  function interval() {
+    if (timer.flag) {
+      fn();
+      setTimeout(interval, timeout);
+    }
+    setTimeout(interval, timeout);
+    return timer;
+  }
+}
+```
+
 ## 异步串行输出
 
 > 实现 createFlow 按照 a, b, 延时 1s, c, 延时 1s, d, e, done 顺序打印
