--- a/source/_posts/面试精选/手写题.md
+++ b/source/_posts/面试精选/手写题.md
@@ -571,11 +571,15 @@ setTimeout(() => {
 
 - 防抖
 
-> 触发高频事件后 n 秒内只执行一次，如果 n 秒内再次触发就会重新计算时间。
+> 设置了固定时间触发的时候，在触发高频事件后如果达到了设置的时间间隔，将执行一次，如果在设置的时间间隔内再次触发就会重新计算时间。
+
+> 常用场景: input 输入
 
 - 节流
 
-> 触发高频事件后 n 秒内只执行一次，所以节流会稀释函数的执行频率。n 秒内再次触发也不会执行
+> 设置了固定时间触发的时候，在触发高频事件过程中如果达到了设置的时间间隔，将执行一次。
+
+> 常用场景: resize scroll 等一定会触发的高频率时间中
 
 - 两者对比
 
@@ -633,6 +637,7 @@ function debounce(func, wait, immediate) {
 - 简单版
 
 ```js
+// 第一次立即执行, 时间戳法
 function shallowThrottle(func, wait) {
   let previous = 0;
   return function (...args) {
@@ -641,6 +646,41 @@ function shallowThrottle(func, wait) {
     if (now - previous > wait) {
       func.apply(context, args);
       previous = now;
+    }
+  };
+}
+
+// 第一次不立即执行，定时器法
+function shallowThrottle(func, wait) {
+  let timer = null;
+  return function () {
+    let context = this;
+    let args = arguments;
+    if (!timer) {
+      timer = setTimeout(function () {
+        func.apply(context, args);
+        timer = null;
+      }, wait);
+    }
+  };
+}
+
+// 结合时间戳法和定时器法，保证第一次和最后一次都执行
+function shallowThrottle(func, wait) {
+  let timer = null;
+  let startTime = Date.now();
+
+  return function () {
+    let currentTime = Date.now();
+    let remainningTime = wait - (currentTime - startTime);
+    let context = this;
+    let args = arguments;
+    clearTimeout(timer);
+    if (remainning <= 0) {
+      func.apply(context, args);
+      startTime = Date.now();
+    } else {
+      timer = setTimeout(func, remaining);
     }
   };
 }
