--- a/source/_posts/面试精选/手写题.md
+++ b/source/_posts/面试精选/手写题.md
@@ -1147,66 +1147,142 @@ function createFlow(iterator = []) {
 }
 ```
 
-## Promise 并发实现
+## 场景题
 
-> 思路如下：
->
-> 1. 定义一个 PromisePool 对象，
-> 2. 初始化一个 pool 作为并发池，然后先循环把并发池塞满, 不断地调用 setTask
-> 3. 然后通过自己自定义的任务函数(任务函数可以是网络请求封装的 promise 对象，或者是其他的), 而且每个任务是一个 Promise 对象包装的
-> 4. 执行完就 pop 出连接池, 任务 push 进并发池 pool 中。
+### 如果一段 js 执行时间非常长，怎么去分析
+
+> 利用装饰器打印某个方法的执行时间
+
+### 阿里云 oss 支持通过链接后面拼参数来做图片的格式转换，尝试写一下把任意图片格式转换为 webp
+
+> 需要注意 webp 的兼容性
 
 ```js
-//promise并发限制
-class PromisePool {
-  constructor(max, fn) {
-    this.max = max; // 最大并发量
-    this.fn = fn; // 自定义的请求函数
-    this.pool = []; // 并发池
-    this.urls = []; // 剩余的请求地址
+function checkWebp() {
+  try {
+    return document.createElement("canvas").toDataURL("image/webp").indexOf("data:image/webp") === 0;
+  } catch (e) {
+    return false;
   }
-  start(urls) {
-    this.urls = urls; // 先循环把并发池塞满
-    while (this.pool.length < this.max) {
-      let url = this.urls.shift();
-      this.setTask(url);
-    }
-    // 利用 Promise.race 方法来获得并发池中某任务完成的信号
-    let race = Promise.race(this.pool);
-    return this.run(race);
+}
+
+const supportWebp = checkWebp();
+
+export function getWebpImageUrl(url) {
+  // 边界条件: url 是否为空
+  if (!url) {
+    throw new Error("url 不能为空");
   }
-  run(race) {
-    race.then(res => {
-      // 每当并发池跑完一个任务，就再塞入一个任务
-      let url = this.urls.shift();
-      this.setTask(url);
-      return this.run(Promise.race(this.pool));
+  // 边界条件: base64
+  if (url.startWith("data:")) {
+    return url;
+  }
+  // 边界条件: 浏览器是否支持 webp
+  if (!supportWebp) {
+    return url;
+  }
+  return url + "?x-oss-processxxx";
+}
+```
+
+### 如果有巨量的图片需要展示，除了懒加载的方式，有没有其他方法限制一下同时加载的图片数量
+
+> 代码题，实现 promise 的并发控制
+
+```js
+function limitLoad(urls, handler, limit) {
+  const sequence = [].cancat(urls);
+  let promises = [];
+  promises = sequence.splice(0, limit).map((url, index) => {
+    return handler(url).then(() => {
+      // 哪一个执行完了
+      return index;
     });
-  }
-  setTask(url) {
-    if (!url) return;
-    let task = this.fn(url);
-    this.pool.push(task); // 将该任务推入pool并发池中
-    console.log(`\x1B[43m ${url} 开始，当前并发数：${this.pool.length}`);
-    task.then(res => {
-      // 请求结束后将该Promise任务从并发池中移除
-      this.pool.splice(this.pool.indexOf(task), 1);
-      console.log(`\x1B[43m ${url} 结束，当前并发数：${this.pool.length}`);
+  });
+
+  let p = Promise.race(promises);
+  for (let i = 0; i < sequence.length; i++) {
+    p = p.then(res => {
+      promises[res] = handler(sequence[i]).then(() => {
+        return res;
+      });
+      return Promise.race(promises);
     });
   }
 }
-// test
-const URLS = ["bytedance.com", "tencent.com", "alibaba.com", "microsoft.com", "apple.com", "hulu.com", "amazon.com"];
-// 自定义请求函数
-var requestFn = url => {
-  return new Promise(resolve => {
+
+// 设置要执行的任务
+function loadImage(url) {
+  return new Promise((resolve, reject) => {
+    console.log("---" + url.info + " start!");
     setTimeout(() => {
-      resolve(`任务${url}完成`);
-    }, 1000);
-  }).then(res => {
-    console.log("外部逻辑", res);
+      console.log(url.info + " OK!!!");
+      resolve();
+    }, url.time);
   });
+}
+
+limitLoad(urls, loadImage, 3);
+```
+
+### 实现 sizeof 函数，传入一个参数 object, 计算这个 object 占用的多少 bytes
+
+```js
+const testData = {
+  a: 111,
+  b: "ccc",
+  2222: false
 };
-const pool = new PromisePool(5, requestFn); // 并发数为5
-pool.start(URLS);
+
+// number: 8 字节
+// string: 每个长度 2 字节
+// boolean: 4 字节
+
+// 存储已经计算过的内存，避免相同引用造成的问题
+const seen = new WeakSet();
+
+function sizeOfObject(object) {
+  if (object === null) {
+    return 0;
+  }
+  let bytes = 0;
+  // 对象里的 key 也是占用内存
+  const properties = Object.keys(object);
+  for (let i = 0; i < properties.length; i++) {
+    const key = properties[i];
+    bytes += calculator(key);
+    if (typeof object[key] === "object" && object[key] !== null) {
+      if (seen.has(object[key])) {
+        // 坑点，key 一定要被算上, 因此 bytes += calculator(key); 要放到前面
+        continue;
+      }
+      seen.add(object[key]);
+    }
+    bytes += calculator(object[key]);
+  }
+  return bytes;
+}
+
+function calculator(object) {
+  const objectType = typeof object;
+
+  switch (objectType) {
+    case "string":
+      return object.length * 2;
+    case "boolean":
+      return 4;
+    case "number":
+      return 8;
+    case "object":
+      if (Array.isArray(object)) {
+        // 递归处理数组
+        return object.map(calculator).reduce((pre, cur) => pre + cur, 0);
+      } else {
+        // 对对象的处理
+        return sizeOfObject(object);
+      }
+    default:
+      return 0;
+  }
+}
 ```
