--- a/source/_posts/面试精选/手写题.md
+++ b/source/_posts/面试精选/手写题.md
@@ -284,51 +284,72 @@ export default function App() {
 ```js
 class EventBus {
   constructor() {
-    this.cache = {};
-  }
-  // 监听
-  on(name, fn) {
-    if (this.cache[name]) {
-      this.cache[name].push(fn);
-    } else {
-      this.cache[name] = [fn];
-    }
-  }
-  // 移除监听
-  off(name, fn) {
-    let tasks = this.cache[name];
-    if (tasks) {
-      const index = tasks.findIndex(f => f === fn || f.callback === fn);
-      if (index >= 0) {
-        tasks.splice(index, 1);
-      }
-    }
+    this.events = {};
+    // 最大监听数量
+    // this.maxListeners = maxListeners || Infinity;
   }
   // 触发
-  emit(name, once = false, ...args) {
-    if (this.cache[name]) {
-      let tasks = this.cache[name].slice();
-      for (let fn of tasks) {
-        fn(...args);
-      }
-      if (once) {
-        delete this.cache[name];
-      }
+  emit(event, ...args) {
+    const cbs = this.events[event];
+
+    if (!cbs) {
+      console.log("没有这个事件!");
+      return this;
     }
+
+    cbs.forEach(cb => cb.apply(this, args));
+
+    return this;
+  }
+  // 监听
+  on(event, cb) {
+    if (!this.events[event]) {
+      this.events[event] = [];
+    }
+
+    // TODO 拦截最大监听
+    // if (this.maxListeners !== Infinity && this.events[event].length >= this.maxListeners) {
+    //   console.log(`当前事件${event}超过最大监听数`);
+    //   return this;
+    // }
+
+    this.events[event].push(cb);
+    return this; // 链式调用，则需要返回 this
+  }
+  // 移除监听
+  off(event, cb) {
+    if (!cb) {
+      this.events[event] = null;
+    } else {
+      this.events[event] = this.events[event].filter(item => item !== cb);
+    }
+    return this; // 链式调用，则需要返回 this
+  }
+  // 只执行一次
+  once(event, cb) {
+    const func = (...args) => {
+      this.off(event, func);
+      cb.apply(this, args);
+    };
+    this.on(event, func);
+    return this;
   }
 }
 
 // 测试
-const eventBus = new EventBus();
-const fn1 = (name, age) => {
-  console.log(`fn1: ${name} ${age}`);
-};
-const fn2 = (name, age) => {
-  console.log(`fn2: ${name} ${age}`);
-};
-eventBus.on("fn1", fn1);
-eventBus.on("fn2", fn2);
-eventBus.emit("fn1", false, "张三", 20);
+const add = (a, b) => console.log(a + b);
+const log = (...args) => console.log(...args);
+const event = new EventBus();
+event.on("add", add);
+event.on("log", log);
+event.emit("add", 1, 2); // 3
+event.emit("log", "hi"); // hi
+event.off("add");
+event.emit("add", 1, 2); // Error: add event is not registered
+event.once("once", add);
+event.emit("once", 1, 2); // 3
+event.emit("once", 1, 2);
+event.emit("once", 1, 2);
 ```
 
 ## Promise 实现
@@ -1283,6 +1304,84 @@ function calculator(object) {
       }
     default:
       return 0;
+  }
+}
+```
+
+### 给 xhr 添加 hook, 实现在各个阶段打印日志
+
+> 重写 xhr 的属性和方法
+
+```js
+class XhrHook {
+  constructor(beforeHooks = {}, afterHooks = {}) {
+    this.XHR = window.XMLHttpRequest;
+    this.beforeHooks = beforeHooks;
+    this.afterHooks = afterHooks;
+    this.init();
+  }
+  init() {
+    let _this = this;
+    // 此处不用箭头函数的问题是因为 this 指向问题，因为实例化后需要指向新构造出的实例上
+    window.XMLHttpRequest = function () {
+      this._xhr = new _this.XHR();
+      _this.overwrite(this);
+    };
+  }
+  overwrite(proxyXHR) {
+    for (let key in proxyXHR._xhr) {
+      if (typeof proxyXHR._xhr[key] === "function") {
+        this.overwriteMethod(key, proxyXHR);
+        continue;
+      }
+      this.overwriteAttributes(key, proxyXHR);
+    }
+  }
+  // 重写方法
+  overwriteMethod(key, proxyXHR) {
+    let beforeHooks = this.beforeHooks; // 我们应该可以拦截原有行为
+    let afterHooks = this.afterHooks;
+
+    proxyXHR[key] = (...args) => {
+      // 拦截
+      if (beforeHooks[key]) {
+        const res = beforeHooks[key].call(proxyXHR, args);
+        if (res === false) {
+          return;
+        }
+      }
+      const res = proxyXHR._xhr[key].apply(proxyXHR._xhr, args);
+      afterHooks[key] && afterHooks[key].call(proxyXHR._xhr, res);
+      return res;
+    };
+  }
+  // 重写属性
+  overwriteAttributes(key, proxyXHR) {
+    Object.defineProperties(proxyXHR, key, this.setPropertyDescriptor(key, proxyXHR));
+  }
+  setPropertyDescriptor(key, proxyXHR) {
+    let obj = Object.create(null); // 得到一个非常干净的对象
+    let _this = this;
+    obj.set = function (val) {
+      if (!key.startsWith("on")) {
+        proxyXHR["__" + key] = val;
+        return;
+      }
+
+      if (_this.beforeHooks[key]) {
+        this._xhr[key] = function (...args) {
+          _this.beforeHooks[key].call(proxyXHR);
+          val.apply(proxyXHR, args);
+        };
+        return;
+      }
+
+      this._xhr[key] = val;
+    };
+    obj.get = function () {
+      return proxyXHR["__" + key] || this._xhr[key];
+    };
+    return obj;
   }
 }
 ```
