--- a/source/_posts/面试精选/手写题.md
+++ b/source/_posts/面试精选/手写题.md
@@ -1385,3 +1385,338 @@ class XhrHook {
   }
 }
 ```
+
+## 简易版 Vue 实现
+
+### 思路
+
+#### 1, index.html 主页面
+
+#### 2. vue.js Vue 主文件
+
+```js
+// vue.js
+import Observer from "./observer.js";
+import Compiler from "./compiler.js";
+
+/**
+ * 包括 vue 构造函数，接收各种配置参数等
+ */
+export default class Vue {
+  constructor(options = {}) {
+    this.$options = options;
+    this.$data = options.data;
+    this.$methods = options.methods;
+
+    this.initRootElement(options);
+    this._proxyData(this.$data);
+
+    // 实例化 Observer 对象，监听数据变化
+    new Observer(this.$data);
+    // 实例化 Compiler 对象，解析指令和模版表达式
+    new Compiler(this);
+  }
+
+  /**
+   * 获取根元素，并存储到 vue 实例，简单检查一下传入的 el 是否合规
+   */
+  initRootElement(options) {
+    if (typeof options.el === "string") {
+      // id / class
+      this.$el = document.querySelector(options.el);
+    } else if (options.el instanceof HTMLElement) {
+      this.$el = options.el;
+    }
+
+    if (!this.$el) {
+      throw new Error("传入的 el 不合法, 请传入 css selector 或 HTMLElement");
+    }
+  }
+
+  /**
+   * 利用 Object.defineProxy 将 data 的属性注入到 vue 实例中
+   */
+  _proxyData(data) {
+    Object.keys(data).forEach(key => {
+      Object.defineProperty(this, key, {
+        enumerable: true,
+        configurable: true,
+        get() {
+          return data[key];
+        },
+        set(newVal) {
+          if (data[key] === newVal) {
+            return;
+          }
+          data[key] = newVal;
+        }
+      });
+    });
+  }
+}
+```
+
+#### 3. compiler.js 解析模版，解析指令，如 v-model v-html
+
+```js
+// compiler.js
+import Watcher from "./watcher.js";
+
+export default class Compiler {
+  constructor(vm) {
+    this.el = vm.$el;
+    this.vm = vm;
+    this.methods = vm.$methods;
+
+    this.compile(vm.$el);
+  }
+
+  /** 编译模版  */
+  compile(el) {
+    const childNodes = el.childNodes;
+    Array.from(childNodes).forEach(node => {
+      if (this.isTextNode(node)) {
+        // 文本节点
+        this.compileText(node);
+      } else if (this.isElementNode(node)) {
+        // 元素节点
+        this.compileElement(node);
+      }
+      // 有子节点，递归调用
+      if (node.childNodes && node.childNodes.length > 0) {
+        this.compile(node);
+      }
+    });
+  }
+
+  compileText(node) {
+    // {{ msg }}
+    const reg = /\{\{(.+?)\}\}/;
+    const value = node.textContent;
+
+    if (reg.test(value)) {
+      // 匹配 msg
+      const key = RegExp.$1.trim();
+      node.textContent = value.replace(reg, this.vm[key]);
+
+      // 用来响应式的展示
+      new Watcher(this.vm, key, newValue => {
+        node.textContent = newValue;
+      });
+    }
+  }
+
+  compileElement(node) {
+    if (node.attributes.length) {
+      Array.from(node.attributes).forEach(attr => {
+        // 遍历元素节点的所有属性
+        const attrName = attr.name; // v-model v-html v-on:click
+        if (this.isDirective(attrName)) {
+          let directiveName = attrName.indexOf(":") > -1 ? attrName.substr(5) : attrName.substr(2);
+          let key = attr.value;
+          this.update(node, key, directiveName);
+        }
+      });
+    }
+  }
+
+  /**
+   * 更新元素节点
+   * @param {*} node
+   * @param {*} key
+   * @param {*} directiveName 指令名
+   */
+  update(node, key, directiveName) {
+    // v-model v-text v-html v-on:click
+    const updateFn = this[directiveName + "Updater"];
+    updateFn && updateFn.call(this, node, this.vm[key], key, directiveName);
+  }
+
+  /** 解析 v-text */
+  textUpdater(node, value, key) {
+    node.textContent = value;
+    new Watcher(this.vm, key, newValue => {
+      node.textContent = newValue;
+    });
+  }
+
+  /** 解析 v-model */
+  modelUpdater(node, value, key) {
+    node.value = value;
+    new Watcher(this.vm, key, newValue => {
+      node.value = newValue;
+    });
+
+    // 更新值，双向绑定
+    node.addEventListener("input", () => {
+      this.vm[key] = node.value;
+    });
+  }
+
+  /** 解析 v-html */
+  htmlUpdater(node, value, key) {
+    node.innerHTML = value;
+    new Watcher(this.vm, key, newValue => {
+      node.innerHTML = newValue;
+    });
+  }
+
+  /** 解析 v-on */
+  clickUpdater(node, value, key, directiveName) {
+    node.addEventListener(directiveName, this.methods[key]);
+  }
+
+  /**
+   * 判断元素属性是否是指令
+   */
+  isDirective(attrName) {
+    return attrName.startsWith("v-");
+  }
+
+  /**
+   * 判断是否是文本节点
+   */
+  isTextNode(node) {
+    return node.nodeType === 3;
+  }
+
+  /**
+   * 判断是否是元素节点
+   */
+  isElementNode(node) {
+    return node.nodeType === 1;
+  }
+}
+```
+
+#### 4. dep.js 收集依赖关系，存储观察者(以发布订阅的形式实现)
+
+```js
+// dep.js
+/**
+ * 发布订阅模式
+ * 存储所有观察者，watcher
+ * 每个 watcher 都有一个 update
+ * 通知 subs 里的每个 watcher 实例，触发 update 方法
+ */
+
+export default class Dep {
+  constructor() {
+    // 存储所有的观察者
+    this.subs = [];
+  }
+
+  /**
+   * 添加观察者
+   */
+  addSub(watcher) {
+    if (watcher && watcher.update) {
+      this.subs.push(watcher);
+    }
+  }
+
+  /**
+   * 发送通知
+   */
+  notify() {
+    this.subs.forEach(watcher => {
+      watcher.update();
+    });
+  }
+}
+```
+
+#### 5. observer.js 数据劫持实现(递归遍历所有属性)
+
+```js
+// observer.js
+import Dep from "./dep.js";
+
+export default class Observer {
+  constructor(data) {
+    this.traverse(data);
+  }
+
+  /**
+   * 递归遍历 data 里的所有属性
+   */
+  traverse(data) {
+    if (!data || typeof data !== "object") return;
+    Object.keys(data).forEach(key => {
+      this.defineReactive(data, key, data[key]);
+    });
+  }
+
+  /**
+   * 数据劫持，给传入的数据设置 getter/setter
+   */
+  defineReactive(obj, key, val) {
+    // val 可能是 object
+    this.traverse(val);
+
+    const that = this;
+    // Dep 在此处实例化, 因为要在 setter 中调用 dep.notify()
+    const dep = new Dep();
+
+    Object.defineProperty(obj, key, {
+      enumerable: true,
+      configurable: true,
+      get() {
+        // 获取的时候收集依赖
+        Dep.target && dep.addSub(Dep.target); // Dep.target 就是为了在此处添加依赖收集用的，添加之后就可以删除了，所以为 null
+        return val;
+      },
+      set(newValue) {
+        if (newValue === val) {
+          return;
+        }
+        val = newValue;
+        // 设置的时候可能设置了一个对象，因此要递归
+        that.traverse(newValue);
+        // 最后发送通知
+        dep.notify();
+      }
+    });
+  }
+}
+```
+
+#### 6. watcher.js 观察者对象类(需要有 update 方法)
+
+```js
+// watcher.js
+import Dep from "./dep.js";
+
+export default class Watcher {
+  /**
+   *
+   * @param {*} vm Vue 实例
+   * @param {*} key data 属性名
+   * @param {*} cb 负责更新视图的回调
+   */
+  constructor(vm, key, cb) {
+    this.vm = vm;
+    this.key = key;
+    this.cb = cb;
+
+    // 同一时间只维持一个 Watcher
+    Dep.target = this;
+
+    // 触发 get 方法，在 get 方法里去做一些操作
+    this.oldValue = vm[key];
+
+    // 为了避免重复的添加 Watcher, 将其设置为 null
+    Dep.target = null;
+  }
+
+  /** 当数据变化时，更新视图 */
+  update() {
+    // 需要判断新旧两个值的关系
+    let newValue = this.vm[this.key];
+    if (this.oldValue === newValue) {
+      return;
+    }
+    this.cb(newValue);
+  }
+}
+```
